# AmericanQcode

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  backtest_runner.py  pyproject.toml  recommend.py  recommend_10m.py  recommend_live.py  requirements.txt
config/: settings.yaml  strategies.yaml  watchlists.yaml
src/cli/: backtest.py  live.py  main.py  report.py  scan.py
src/core/: config.py  exceptions.py  market_calendar.py  models.py
src/data/: alpha_vantage_provider.py  base.py  cache.py  database.py  finnhub_provider.py  itick_provider.py  rate_limiter.py  repository.py  yahoo_provider.py
src/engine/: backtester.py  scanner.py  scheduler.py  signal_pipeline.py
src/indicators/: adx.py  base.py  bollinger.py  candlestick.py  kdj.py  macd.py  moving_averages.py  obv.py  rsi.py  support_resistance.py  vwap.py
src/strategies/: base.py  bollinger_squeeze.py  candlestick_pattern.py  composite.py  ma_breakout.py  macd_cross.py  rsi_divergence.py
src/utils/: logging_config.py  parallel.py  time_utils.py
src/web/: app.py
src/web/routers/: api_charts.py  api_screener.py  api_signals.py  dashboard.py  ws.py
src/web/static/css/: style.css
src/web/static/js/: chart.js  dashboard.js  screener.js
src/web/templates/: base.html  chart.html  dashboard.html  screener.html  signals.html
tests/: conftest.py
tests/test_engine/: test_signal_pipeline.py
tests/test_indicators/: test_macd.py  test_moving_averages.py  test_rsi.py
