[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "american-qcode"
version = "0.1.0"
description = "US Stock Quantitative Trading Strategy System"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Quant Trader"}
]

dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "TA-Lib>=0.4",
    "yfinance>=0.2",
    "polygon-api-client>=1.14",
    "alpha-vantage>=3.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "click>=8.1",
    "rich>=13.7",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "omegaconf>=2.3",
    "apscheduler>=3.10",
    "pydantic>=2.7",
    "loguru>=0.7",
    "orjson>=3.10",
    "pytz>=2024",
    "exchange-calendars>=4.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
qt = "src.cli.main:cli"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
